# 26_AT_wheel_dog

./: README.md
src/dog/: CMakeLists.txt  package.xml
src/dog/config/: joint_names_dog.yaml
src/dog/model/: body_link.STL  dog.csv  dog.urdf  dog.xml  lb_link1.STL  lb_link2.STL  lb_link3.STL  lb_link4.STL  lf_link1.STL  lf_link2.STL  lf_link3.STL  lf_link4.STL  rb_link1.STL  rb_link2.STL  rb_link3.STL  rb_link4.STL  rf_link1.STL  rf_link2.STL  rf_link3.STL  rf_link4.STL  scene.xml
src/dog_controller/include/dog_controller/: dog_controller.hpp
src/dog_controller/src/: dog_controller.cpp
src/imu_driver/: CMakeLists.txt  package.xml
src/imu_driver/include/imu_driver/: imu_driver.hpp
src/imu_driver/src/: imu_driver.cpp  main.cpp
src/launch_pack/config/: ros2_controller.yaml
src/launch_pack/launch/: controller_load.py  dog_calc_rviz2.launch.py  dog_driver_calc_rviz2.launch.py  dog_driver_fdimu_calc_rviz2.launch.py  dog_mujoco_sim.py  dog_sim_calc_rviz2.launch.py  remote_control.py  static_display.launch.py
src/launch_pack/src/: CSV.csv  dog_leg_mass_calc.m
src/leg_driver/: CMakeLists.txt  package.xml
src/leg_driver/include/leg_driver/: data_pack.h  serialnode.hpp
src/leg_driver/src/: cdc_trans.cpp  kalman_filter.cpp  main.cpp  remote_pub.cpp  serialnode.cpp
src/move_control/: CMakeLists.txt  package.xml
src/move_control/include/: robot.hpp
src/move_control/include/core/: estimater.hpp  robot.hpp  robotfsm.hpp
src/move_control/include/fsm/: base_state.hpp  fsm.hpp
src/move_control/include/leg/: leg_calc.hpp  step.hpp  vmc.hpp
src/move_control/include/states/: amble.hpp  climb_steps.hpp  cross_wall.hpp  idel.hpp  jump.hpp  mpc.hpp  mpc2.hpp  setup.hpp  stop.hpp  walk.hpp
src/move_control/src/: main.cpp  robot.cpp  test.cpp
src/move_control/src/core/: estimater.cpp  robot.cpp  robotfsm.cpp
src/move_control/src/fsm/: fsm.cpp
src/move_control/src/leg/: leg_calc.cpp  step.cpp  vmc.cpp
src/move_control/src/states/: amble.cpp  climb_steps.cpp  cross_wall.cpp  example.cpp  idel.cpp  jump.cpp  mpc.cpp  mpc2.cpp  setup.cpp  stop.cpp  walk.cpp
src/robot_interfaces/: CMakeLists.txt
