<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>move_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lyz@todo.todo">lyz</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>robot_interfaces</depend>
  <depend>leg_driver</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>

  <!-- External CMake library dependencies -->
  <build_depend>qpOASES</build_depend>
  <exec_depend>qpOASES</exec_depend>
  
  <build_depend>osqp</build_depend>
  <exec_depend>osqp</exec_depend>

  <build_depend>osqp-eigen</build_depend>
  <exec_depend>osqp-eigen</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
